--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       </div>
       <!-- filter buttons -->
       <div class="btn-container">
-        <button type="button" class="filter-btn" data-id="all">all</button>
+        <!--<button type="button" class="filter-btn" data-id="all">all</button>
         <button type="button" class="filter-btn" data-id="breakfast">
           breakfast
         </button>
         <button type="button" class="filter-btn" data-id="sweet-breakfast">
           sweet breakfast
         </button>
-        <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+        <button type="button" class="filter-btn" data-id="lunch">lunch</button>-->
       </div>
       <!-- menu items -->
       <div class="section-center">
         <!-- single item -->
-        <article class="menu-item">
+        <!--<article class="menu-item">
           <img
             src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzE2Njc4ODA&ixlib=rb-4.0.3&q=80"
             alt="menu item"
@@ -49,7 +49,7 @@
               laboriosam excepturi! Quo, officia.
             </p>
           </div>
-        </article>
+        </article>-->
         <!-- end of single item -->
       </div>
     </section>
